# Chronic

./: .gitignore  .gitmodules  CONTRIBUTING.md  FAQ.md  LICENSE  README.md
.github/workflows/: ci_build.yml
api/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  config.toml.example  generate.vsh  v.mod
api/src/: account.v  connect.v  etc.v  files.v  main.v  oauth.v  users.v  utils.v
api/src/db/tables/: user.v
api/src/saving/: local.v  saver.v
auth_server/: README.md  pyproject.toml
client/: Makefile  README.md  v.mod
client/src/: engine.v  framework.v  main.v  main.v.old
client/src/config/: save.v
client/src/engine/: app.v  context.v  microui.v  nk.v  prefer.v  save.v  ui.v
client/src/engine/prefer/: prefer.v
client/src/engine/renderers/: base_renderer.v  gg_renderer.v  null_renderer.v
client/src/engine/types/: app.v  base_renderer.v  camera2d.v  color.v  context.v  matrix.v  rect.v  screen.v
client/src/globals/: globals.v
client/src/network/: api.v  enet.v  manager.v  packetregistry.v
client/src/network/packets/: init.v
client/src/network/types/: packet.v  reader.v  writer.v
client/src/raylib/: raylib.v
client/src/screens/: loading.v  login.v  menu.v  server_connect.v
server/: Dockerfile  compose.yml  config.toml  config.toml.example  v.mod
server/src/: main.v
server/src/network/: netcode.v
