[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = ""
authors = ["SuperErnD <phelonc33m@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
